--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -53,4 +53,14 @@
     <color name="player_progress_color">#feab91</color>
     <color name="player_background_color">#db2a0f</color>
 
+
+
+
+
+    <color name="detail_background">#0096a6</color>
+
+    <!-- App link side panel -->
+    <color name="side_panel_background">#263238</color>
+    <color name="side_panel_header_background">#0277BD</color>
+    <color name="side_panel_item_text">#FFEEEEEE</color>
 </resources>
