--- a/app/src/main/res/values/dims.xml
+++ b/app/src/main/res/values/dims.xml
@@ -46,4 +46,18 @@
 
     <dimen name="playback_now_playing_card_width">240dp</dimen>
     <dimen name="playback_now_playing_card_height">240dp</dimen>
+
+
+
+    <dimen name="side_panel_width">360dp</dimen>
+    <dimen name="side_panel_padding_start">32dp</dimen>
+    <dimen name="side_panel_padding_end">56dp</dimen>
+    <dimen name="side_panel_elevation">8dp</dimen>
+    <dimen name="side_panel_header_height">87dp</dimen>
+    <dimen name="side_panel_header_padding_top">27dp</dimen>
+    <dimen name="side_panel_header_elevation">4dp</dimen>
+    <dimen name="side_panel_header_text_size">24sp</dimen>
+    <dimen name="side_panel_item_text_size">16sp</dimen>
+    <dimen name="side_panel_item_padding_top">11dp</dimen>
+    <dimen name="side_panel_item_padding_bottom">12.5dp</dimen>
 </resources>
